# rp2350-sensor-hub

./: .gitignore  .nvim.lua  Cargo.toml  Embed.toml  Makefile.toml  justfile
.cargo/: config.toml
.github/workflows/: ci_checks.yml
axum-server/: Cargo.toml  Dockerfile  Makefile.toml  docker-compose.development.override.yaml  docker-compose.yaml
axum-server/.cargo/: config.toml
axum-server/measurements-frontend/: .env.development  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
axum-server/measurements-frontend/src/: App.vue  ErrorPanel.vue  appState.ts  assets.ts  config.ts  cssColors.ts  cssManager.ts  main.css  main.ts  measurementsApi.ts  utils.ts
axum-server/measurements-frontend/src/charts/: HumidityChart.vue  HumidityD3Chart.vue  TemperatureChart.vue  chartOptions.ts
axum-server/measurements-frontend/tests/: constants.ts  measurements-frontend.spec.ts
axum-server/registry/: config.yml  docker-compose.yaml
axum-server/src/: main.rs
axum-server/static-content/: index.html
crates/embassy-dht-rp2350-sensor/: Cargo.toml
crates/embassy-dht-rp2350-sensor/src/: dht_rp.rs  dht_rp_pio.rs
crates/embassy-dht-sensor/: Cargo.toml
crates/embassy-dht-sensor/src/: dht_rp_pio.rs  lib.rs
crates/game-logic/: Cargo.toml
crates/game-logic/src/: lib.rs  player.rs  two_four_eighteen.rs
crates/pico-display/: Cargo.toml
crates/pico-display/src/: aliases.rs  dice.rs  die.rs  lib.rs  messages.rs  utils.rs
server/: Dockerfile  docker-compose.yaml  package-lock.json  package.json
server/src/: index.js  utils.js
src/: main.rs
src/game/: cache.rs  entities.rs  error.rs  player.rs  tasks.rs
src/network/: controller.rs  error.rs  tasks.rs
src/temperature_and_humidity/: error.rs  tasks.rs
tests/: Cargo.toml  test_die.rs  test_game.rs  test_player.rs
