[workspace]
members = ["crates/*", "tests"]

[package]
edition = "2024"
name = "rp2350-sensor-hub"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"

# We're using a Pico 2 by default on this template
#rp-pico2 = "0.9" # TODO: Do we have that crate already ?

# If you're not going to use a Board Support Package you'll need these:
rp235x-hal = { version = "0.3", features = [
  "rt",
  "critical-section-impl",
  "binary-info",
] }

display-interface = "0.5.0"
embassy-dht-sensor = { version = "0.2.7", optional = true }
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.9.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "rt",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embedded-alloc = "0.6.0"
embedded-graphics = { workspace = true }
embedded-graphics-framebuf = "0.5.0"
panic-probe = { version = "1", features = ["print-defmt"] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
rand = { workspace = true }
ssd1306 = { version = "0.10.0", features = ["async"] }
static_cell = "2.1.1"
u8g2-fonts = { workspace = true }

game-logic = { path = "./crates/game-logic" }
pico-display = { path = "./crates/pico-display" }

[workspace.dependencies]
embedded-graphics = "0.8.1"
rand = { version = "0.9.2", features = ["small_rng"], default-features = false }
trait-set = "0.3.0"
u8g2-fonts = "0.7.2"

# cargo build/run
[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo build/run --release
[profile.release]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 2
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

# cargo test
[profile.test]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo test --release
[profile.bench]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 3

[features]
temperature = []
