[workspace]

[package]
name = "axum-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["query", "typed-header"] }
chrono = { version = "0.4.43", features = ["serde"] }
include_dir = "0.7.4"
mime_guess = "2.0.5"
ringbuffer = { version = "0.16.0", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
