[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
lazy_static = "1.5.0"
rstest = "0.26.1"
tracing = "0.1.41"
test-log = { version = "0.2", features = ["trace"] }
embedded-graphics = { workspace = true }
embedded-graphics-simulator = "0.8.0"
rand = { workspace = true, default-features = true }
pico-display = { path = "../crates/pico-display" }
game-logic = { path = "../crates/game-logic" }

[[test]]
name = "test-die"
path = "test_die.rs"

[[test]]
name = "test-player"
path = "test_player.rs"

[[test]]
name = "test-game"
path = "test_game.rs"
