[package]
name = "embassy-dht-rp2350-sensor"
version = "0.0.1"
edition = "2021"
authors = ["istehem", "Mark Berner (original author)"]
license = "MIT OR Apache-2.0"
description = "Fork of the DHT sensor driver for the Embassy async runtime that runs on rp2350"

[features]
default = ["rp235xa", "dht2x", "rp_pio"]
rp235xa = ["dep:embassy-rp"]
dht1x = []
dht2x = []
rp_pio = []
rp_no_pio = []

[lib]
name = "embassy_dht_sensor"
path = "src/lib.rs"

[dependencies]
cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"

embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.5", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }

embassy-rp = { version = "0.9.0", features = [
  "rp235xa",
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
], optional = true }
defmt = { version = "1", optional = true }
defmt-rtt = { version = "1", optional = true }
panic-probe = { version = "1", features = ["print-defmt"], optional = true }
fixed = "1.29"
